# t5_llm_jokes_peft

./: README.md  pyproject.toml
data/: test.csv  train.csv  valid.csv
data/dt_test/: data-00000-of-00001.arrow  state.json
data/dt_train/: state.json
data/jokes-flan-t5-large/logs/: events.out.tfevents.1723999496.9b30c795f148.2007.0  events.out.tfevents.1723999508.9b30c795f148.2007.1  events.out.tfevents.1724012763.pc.115733.0
data/results/checkpoint-20325/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
data/results/logs/: events.out.tfevents.1724016772.b55aac99fc32.2133.0
notebooks/: 00_jokes_split.ipynb  01_t5_jokes_vanilla.ipynb  02_tokenization.ipynb  03_trainer.ipynb  04_results.ipynb
tests/: 01_start.ipynb  02_trainer.ipynb
