[tool.poetry]
name = "t5-jokes-peft"
version = "0.1.0"
description = "fine tuning T5 Large Llm with peft, for making q/a jokes"
authors = ["Svyatoslav Mikryukov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
black = "^24.8.0"
pandas = "^2.2.2"
transformers = "^4.44.0"
peft = "^0.12.0"
sentencepiece = "^0.2.0"
datasets = "^2.21.0"
tensorboard = "^2.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
